[tool.poetry]
name = "cheer-api"
version = "0.1.0"
description = ""
authors = ["Alex Mathew <alexmathew003@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.2"
requests = "^2.26.0"
psycopg2-binary = "^2.9.1"
channels = "^3.0.4"
channels_redis = "^3.3.0"
django-cors-headers = "^3.9.0"

[tool.poetry.dev-dependencies]
ipython = "^7.28.0"
ipdb = "^0.13.9"
pre-commit = "^2.15.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
