[tool.poetry]
name = "cheer-api"
version = "0.1.0"
description = ""
authors = ["Alex Mathew <alexmathew003@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.2"
requests = "^2.26.0"
channels = "^3.0.4"
channels_redis = "^3.3.0"
django-cors-headers = "^3.9.0"
redis = "^3.5.3"
django-s3-sqlite = "^0.0.4"

[tool.poetry.dev-dependencies]
ipython = "^7.28.0"
ipdb = "^0.13.9"
pre-commit = "^2.15.0"
jupyter = "^1.0.0"
zappa = "0.54.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[tool.black]
line_length = 88
